fix overflowing of elements in mobile view

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -31,7 +31,7 @@
     }
 
     @include c.media(mobile) {
-      right: -57px;
+      right: 0px;
       bottom: -30px;
     }
   }
